# cpp

./: .gitignore  compile.sh
app1/source/: CMakeLists.txt
app1/source/include/: socket.hpp  socket_server.hpp  thread.hpp
app1/source/src/: buffer.cxx  main.cxx  socket.cxx  thread1.cxx  thread2.cxx
app2/source/: CMakeLists.txt
app2/source/include/: mode.hpp  socket.hpp
app2/source/src/: main.cxx  socket.cxx
